# ConlangBot

./: Cargo.toml  build.rs
profiles/: conlanginghub.json  test.json
src/: channel.rs  database.rs  handler.rs  main.rs  profile.rs
src/commands/: archive.rs  ban.rs  category.rs  contributor.rs  create.rs  create_interaction.rs  create_modal.rs  debug.rs  delete.rs  delete_interaction.rs  edit.rs  edit_modal.rs  fixperms.rs  migrate.rs  mod.rs  mode.rs  unban.rs  viewer.rs  wordgen.rs
