[package]
name = "ConlangingHub"
authors = ["Webbiii"]
version = "0.1.0"
edition = "2021"

[profile.release-opt]
inherits = "release"
strip = true
opt-level = "z"
lto = true
panic = "abort"

[dependencies]
serde = "*"
serde_json = "*"
rand = "*"

[dependencies.sqlx]
version = "*"
features = ["runtime-tokio-rustls", "mysql"]

[dependencies.tokio]
version = "*"
features = ["rt-multi-thread", "macros", "fs"]

[dependencies.serenity]
version = "*"
default-features = false
features = ["client", "gateway", "rustls_backend", "builder", "model", "collector"]